@@ -250,6 +250,7 @@ export(dgen_extreme_value)
 export(dinv_gaussian)
 export(dmulti_normal)
 export(dmulti_student_t)
+export(dshifted_lnorm)
 export(dskew_normal)
 export(dstudent_t)
 export(dvon_mises)
@@ -338,11 +339,13 @@ export(prior_)
 export(prior_samples)
 export(prior_string)
 export(prior_summary)
+export(pshifted_lnorm)
 export(pskew_normal)
 export(pstudent_t)
 export(pvon_mises)
 export(qasym_laplace)
 export(qfrechet)
+export(qshifted_lnorm)
 export(qskew_normal)
 export(qstudent_t)
 export(ranef)
@@ -363,6 +366,7 @@ export(rhat)
 export(rinv_gaussian)
 export(rmulti_normal)
 export(rmulti_student_t)
+export(rshifted_lnorm)
 export(rskew_normal)
 export(rstudent_t)
 export(rvon_mises)
@@ -371,6 +375,7 @@ export(s)
 export(set_nl)
 export(set_prior)
 export(set_rescor)
+export(shifted_lognormal)
 export(skew_normal)
 export(sratio)
 export(stancode)
