@@ -1041,7 +1041,7 @@ valid_dpars.default <- function(family, bterms = NULL, ...) {
     zoi = is_zero_one_inflated(family),
     coi = is_zero_one_inflated(family),
     bs = is_wiener(family), 
-    ndt = is_wiener(family), 
+    ndt = has_ndt(family), 
     bias = is_wiener(family), 
     disc = is_ordinal(family),
     quantile = is_asym_laplace(family),
